--- a/BusinessCardDesign/index.html
+++ b/BusinessCardDesign/index.html
@@ -10,12 +10,12 @@
     <div class="business-card">
         <image class="profile-image" src="https://cdn.freecodecamp.org/curriculum/labs/flower.jpg" alt="a picture of a beautiful flower">
         </image>
-        <p class="full-name">Gaia Assali</p>
+        <p class="full-name">Gaia</p>
         <p class="designation">Amante dei gatti</p>
-        <p class="company">sgusgas spa</p>
+        <p class="company">rambo spa</p>
         <hr>
-        <p>sgusgas@gmail.com</p>
-        <p>+39 389 657 9852</p>
+        <p>rambo@gmail.com</p>
+        <p>+39 123 456 7890</p>
         <a href="https://it.wikipedia.org/wiki/Felis_silvestris_catus">Portfolio</a>
         <hr>
         <div class="social-media">
