--- a/Ricettario.html
+++ b/Ricettario.html
@@ -4,7 +4,7 @@ a<!DOCTYPE html>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VAWT Wind Turbine</title>
-    <link rel="stylesheet" href="ricettario-styles.css">
+    <link rel="stylesheet" href="ricettario-styles.css"/>
 </head>
 <body>
     <section class="header">
