--- a/Ricettario.html
+++ b/Ricettario.html
@@ -3,7 +3,7 @@ a<!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VAWT Wind Turbine</title>
+    <title>Pizza fatta in casa</title>
     <link rel="stylesheet" href="ricettario-styles.css"/>
 </head>
 <body>
